增加Docker构建脚本

--- a/manifest/docker/Dockerfile
+++ b/manifest/docker/Dockerfile
@@ -5,7 +5,9 @@ FROM loads/alpine:3.8
 ###############################################################################
 
 ENV WORKDIR                 /app
-ADD resource                $WORKDIR/
+ADD resource                $WORKDIR/resource
+COPY config.prod.yaml     $WORKDIR/config.yaml
+COPY frontend/dist          $WORKDIR/resource/public/xyhelper
 ADD ./temp/linux_amd64/main $WORKDIR/main
 RUN chmod +x $WORKDIR/main
 
