--- a/config.yaml
+++ b/config.yaml
@@ -57,6 +57,7 @@ modules:
 
 # 接入网关地址
 CHATPROXY: "https://demo.xyhelper.cn"
+# CHATPROXY: "http://172.17.0.1:7009"
 # 接入网关的authkey
 AUTHKEY: "xyhelper"
 ONLYTOKEN: true
