--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"echarts": "^5.3.3",
 		"element-plus": "^2.2.28",
 		"file-saver": "^2.0.5",
+		"fkarkos": "^0.1.1",
 		"lodash-es": "^4.17.21",
 		"mitt": "^3.0.0",
 		"mockjs": "^1.1.0",
