--- a/config.prod.yaml
+++ b/config.prod.yaml
@@ -4,11 +4,11 @@ server:
   serverRoot: "resource/public"
   clientMaxBodySize: 104857600  # 100MB in bytes 100*1024*1024
 
-logger:
-  path: "./data/logs/"
-  file: "{Y-m-d}.log"
-  level : "info"
-  stdout: true
+# logger:
+#   path: "./data/logs/"
+#   file: "{Y-m-d}.log"
+#   level : "info"
+#   stdout: true
 
 
 database:
